--- a/_config.yml
+++ b/_config.yml
@@ -53,10 +53,10 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # 站点页脚的文字
-footer-text: Copyright (c) 2019 来自中世界
+footer-text: Copyright (c) 2020 来自中国北京
 
 # 输入Disqus shortname，即可添加评论区，细节可阅读文档。
-disqus: loffer #shortname
+disqus: loujitao #shortname
 
 # 输入Google Analytics web tracking code
 google_analytics:
