--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ description: 一枚小码农
 #
 
 # 你的博客logo图片URL，建议尺寸不超过300px × 300px
-avatar: https://github.com/loujitao/loujitao.github.io/blob/master/images/favicon.png
+avatar: /images/favicon.png
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://github.com/loujitao/loujitao.github.io/blob/master/images/favicon.png
+favicon: /images/favicon.png
 
 
 # 菜单中的按钮
