--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,8 @@ baseurl: /
 # !! 以下所有设置都不需要更改 !!
 #
 
-permalink: /:title/
+permalink: /    
+##/:title/
 paginate_path: /page:num/
 
 # The release of Jekyll Now that you're using
